2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-style.c: (mist_style_draw_shadow):
	- Just return for shadow_type == NONE. Fixes bug #366716 (John Cupitt)

	* engines/mist/src/mist-style.c: (mist_style_draw_check):
	- Use the passed in style instead of widget->style. Fixes a possible
	  crasher.
	- Clip the gc correctly.

2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_combobox_button), (redmond_draw_handle):
	- Fix some broken parent accesses.

2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c:
	(glide_draw_combobox_button):
	* engines/hc/src/hc-style.c: (hc_draw_shadow):
	- Fix bug 352602 for glide and hc. hc now doesn't use cached colors
	but recalculates them from the GtkStyle. glide called internal drawing
	functions that I replaced with their gtk_paint_* equivalent.

2006-10-10  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/mist/src/mist-style.c: 
	- Merge Tab function into Extension
	- Replace common return if.... with CHECK_ARGS macro

2006-10-10  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_drawing.c: 
	* engines/glide/src/glide_gtk2_engine.c:
	* engines/glide/src/glide_gtk2_engine.h:
	* engines/glide/src/glide_gtk2_support.c:
	* engines/glide/src/glide_gtk2_support.h:
	* engines/redmond/src/redmond_gtk2_drawing.c:
	* engines/redmond/src/redmond_gtk2_engine.c:
	* engines/redmond/src/redmond_gtk2_engine.h:
	* engines/redmond/src/redmond_gtk2_misc.c:
	* engines/redmond/src/redmond_gtk2_misc.h:
	* engines/support/cairo-support.c:
	* engines/support/cairo-support.h:
	- Move Glide/Redmond Pattern Fill into Support
	
	* engines/thinice/src/thinice_theme_draw.c:
	- Merge Tab function into Extension

2006-10-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_simple_border):