@@ -1,3 +1,11 @@
+2006-11-03  Andrew Johnson  <acjgenius@earthlink.net>
+	* engines/redmond/src/redmond_gtk2_drawing.c:
+		- Fix background fill for redmond scales
+		
+	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
+	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
+		- Smooth Fix for bug 352602
+		
 2006-11-03  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/mist/src/mist-style.c: (mist_style_draw_shadow):
